--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         programa ingenieria de sistemas
         fecha: 13-03-2021
         Email: marlynvivianamechi@gmail
-        skype: marlynvivianamechi
+        skype:marlynvivianamechi
     </p>
+    <hr>
+    <a href="fase2/design.html">actividad fase2</a>
 </body>
 </html>
